--- a/team.html
+++ b/team.html
@@ -73,41 +73,9 @@
 				<div class="row row-cols-2 row-cols-sm-3 row-cols-lg-4 gx-0 gy-4">
 					<div>
 						<div class="master">
-							<img src="img/team/1.png">
+							<img src="img/team/5.png">
 							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Елена</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/4.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-1.html">Максим Жданов</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -126,10 +94,10 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+								<a href="master-1.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 									<span class="f_08 light-gray">о мастере</span>
 								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 									<span class="f_08">Записаться</span>
 								</button>
 							</div>
@@ -139,8 +107,8 @@
 						<div class="master">
 							<img src="img/team/5.png">
 							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-2.html">Руслан Петров</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, стилист</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -158,10 +126,10 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+								<a href="master-2.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 									<span class="f_08 light-gray">о мастере</span>
 								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 									<span class="f_08">Записаться</span>
 								</button>
 							</div>
@@ -171,8 +139,8 @@
 						<div class="master">
 							<img src="img/team/1.png">
 							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Елена</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-3.html">Наталья Ворон</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Топ - стилист,колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -190,10 +158,42 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+								<a href="master-3.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 									<span class="f_08 light-gray">о мастере</span>
 								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="master">
+							<img src="img/team/2.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-4.html">Алсу Залялутдинова</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, мастер униварсал по женским и мужским стрижкам</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<a href="master-4.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</a>
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 									<span class="f_08">Записаться</span>
 								</button>
 							</div>
@@ -203,8 +203,8 @@
 						<div class="master">
 							<img src="img/team/4.png">
 							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-5.html">Эльсия</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Стилист, коллорист, женский мастер</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -222,10 +222,10 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+								<a href="master-5.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 									<span class="f_08 light-gray">о мастере</span>
 								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 									<span class="f_08">Записаться</span>
 								</button>
 							</div>
@@ -233,10 +233,10 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/5.png">
+							<img src="img/team/3.png">
 							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-5.html">Екатерина Рыбак</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Мастер ногтевого сервиса</div>
 								<div class="rating justify-content-center mb-2 mb-md-3">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
@@ -254,74 +254,10 @@
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
 									</svg>
 								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+								<a href="master-5.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
 									<span class="f_08 light-gray">о мастере</span>
 								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/4.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/5.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+								<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_sm btn_1 mx-auto">
 									<span class="f_08">Записаться</span>
 								</button>
 							</div>
@@ -493,6 +429,33 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
+			</div>
+		</div>
+	</div>
+
+	<!-- callback simple -->
+	<div class="modal fade" id="callback" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="box">
+					<form action="">
+						<h4>Онлайн запись</h4>
+						<input type="text" placeholder="Имя" class="w-100 mb-3">
+						<input type="text" placeholder="Номер телефона" class="w-100 mb-3">
+						<textarea name="" rows="3" placeholder="Комментарий" class="w-100 mb-4"></textarea>
+						<div class="d-flex mb-4">
+							<input type="checkbox" id="consent" class="me-3">
+							<label for="consent" class="f_08">Согласие на обработку персональных данных</label>
+						</div>
+						<button type="submit" class="btn_main btn_1 mx-auto">Отправить</button>
+					</form>
+				</div>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
