--- a/service-page-2.html
+++ b/service-page-2.html
@@ -71,130 +71,242 @@
 		<section id="sec-8">
 			<div class="container">
 				<h1 class="inner">Окрашивание</h1>
-				<h4>Окрашивание в один тон</h4>
-				<p class="font-2 mb-4">Окрашивание тон в тон — это самый естественный и натуральный вариант для окрашивания волос, который иногда создает иллюзию того, что волосы и вовсе не окрашивались. Мы создадим ровный, идеальный оттенок по всей длине, начиная с корней. Сначала выравнивается цвет, а потом тонируется. Процедура занимает два часа.Подходит также мужчинам (мужской камуфляж).</p>
-				<div class="f_12 font-2 fw_6 mb-3 mb-sm-4 mb-lg-5">Наши работы:</div>
-				<div class="position-relative mb-4">
-					<div class="swiper-5">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
-								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
-							</svg>
-						</div>
-						<div class="swiper-button-next">
-							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
-								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
-							</svg>
-						</div>
-					</div>
-				</div>
-				<div class="font-2 mb-5"><span class="dark-gray f_12 fw_6">Цены:</span> <span class="light-gray">*Конечная цена зависит от количества используемого материала, сложности окрашивания и исходного цвета волос.</span></div>
-				<div class="table-responsive text-center mb-5">
-					<table class="table">
-						<tbody>
-							<tr>
-								<td>Короткая длинна</td>
-								<td>Средняя длинна</td>
-								<td>Длинные волосы</td>
-								<td></td>
-							</tr>
-							<tr class="fw_3">
-								<td>3000 —  3500 ₽</td>
-								<td>4000 —  4500 ₽</td>
-								<td>5000 —  6000 ₽</td>
-								<td>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
-										<span class="f_08 light-gray">Записаться</span>
-									</button>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-					<span class="f_09">Мастера</span>
-				</button>
-				<hr size="2" class="my-5">
-				<h4>Сложное окрашивание</h4>
-				<p class="font-2 mb-4">Сложное крашивание даёт возможность разгуляться воображению и получить эксклюзивный цвет, которого нет ни у кого: пастельный розовый, ярко розовый, фуксия, фиолетовый, мятный, голубой, серебро, синий, серый, жетый и оранжевый!</p>
-				<div class="f_12 font-2 fw_6 mb-3 mb-sm-4 mb-lg-5">Наши работы:</div>
-				<div class="position-relative mb-4">
-					<div class="swiper-5">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
-								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
-							</svg>
-						</div>
-						<div class="swiper-button-next">
-							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
-								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
-							</svg>
-						</div>
-					</div>
-				</div>
-				<div class="font-2 mb-5"><span class="dark-gray f_12 fw_6">Цены:</span> <span class="light-gray">*Конечная цена зависит от количества используемого материала, сложности окрашивания и исходного цвета волос.</span></div>
-				<div class="table-responsive text-center mb-5">
-					<table class="table">
-						<tbody>
-							<tr>
-								<td>Короткая длинна</td>
-								<td>Средняя длинна</td>
-								<td>Длинные волосы</td>
-								<td></td>
-							</tr>
-							<tr class="fw_3">
-								<td>3000 —  3500 ₽</td>
-								<td>4000 —  4500 ₽</td>
-								<td>5000 —  6000 ₽</td>
-								<td>
-									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
-										<span class="f_08 light-gray">Записаться</span>
-									</button>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-					<span class="f_09">Мастера</span>
-				</button>
-				<hr size="2" class="my-5">
-				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера  по окрашиванию</div>
 
+				<h4>Окрашивание в один тон</h4>
+				<p class="font-2 mb-4">Окрашивание в один тон - покраска в один цвет волос от корней до кончиков в один оттенок.</p>
+				<div class="f_12 font-2 fw_6 mb-3 mb-sm-4 mb-lg-5">Наши работы:</div>
+				<div class="position-relative mb-4">
+					<div class="swiper-5">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+						</div>
+						<div class="swiper-button-prev">
+							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+							</svg>
+						</div>
+						<div class="swiper-button-next">
+							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="font-2 mb-5"><span class="dark-gray f_12 fw_6">Цены:</span> <span class="light-gray">*Конечная цена зависит от количества используемого материала, сложности окрашивания и исходного цвета волос.</span></div>
+				<div class="table-responsive text-center mb-5">
+					<table class="table fw_3">
+						<tbody>
+							<tr class="fw_5">
+								<td>Услуга</td>
+								<td>Стоимость</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Длина до плеч</td>
+								<td>3000-3500</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина до лопаток</td>
+								<td>4000-4500</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина ниже лопаток</td>
+								<td>5000-6000</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+					<span class="f_09">Мастера</span>
+				</button>
+				<hr size="2" class="my-5">
+
+				<h4>Сложное окрашивание</h4>
+				<p class="font-2 mb-4">Сложное окрашивание волос включает в услугу осветление волос порошком, добавление светлых прядей по всей длине или частично, выведение из черного цвета в более светлый тон, осветление блонд с тонированием и использованием порошка, покраска в любой очень яркий цвет.</p>
+				<div class="f_12 font-2 fw_6 mb-3 mb-sm-4 mb-lg-5">Наши работы:</div>
+				<div class="position-relative mb-4">
+					<div class="swiper-5">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+						</div>
+						<div class="swiper-button-prev">
+							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+							</svg>
+						</div>
+						<div class="swiper-button-next">
+							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="font-2 mb-5"><span class="dark-gray f_12 fw_6">Цены:</span> <span class="light-gray">*Конечная цена зависит от количества используемого материала, сложности окрашивания и исходного цвета волос.</span></div>
+				<div class="table-responsive text-center mb-5">
+					<table class="table fw_3">
+						<tbody>
+							<tr class="fw_5">
+								<td>Услуга</td>
+								<td>Стоимость</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Длина до плеч</td>
+								<td>5000-6500</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина до лопаток</td>
+								<td>6500-8000</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина ниже лопаток</td>
+								<td>8000-15000</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+					<span class="f_09">Мастера</span>
+				</button>
+				<hr size="2" class="my-5">
+
+				<h4>Окрашивание индийской хной</h4>
+				<p class="font-2 mb-4">Окрашивание Индийской хной - это окрашивание натуральным продуктом Хной, обладающее лечебным эффектом и придающее цвет натуральных теплых тонов с потрясающим блеском. Также подходящее для чувствительной кожи головы, беременным, кормящим мамам. Закрашивает седину на 100%</p>
+				<div class="f_12 font-2 fw_6 mb-3 mb-sm-4 mb-lg-5">Наши работы:</div>
+				<div class="position-relative mb-4">
+					<div class="swiper-5">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/coloring/1.png" alt="" class="img-example">
+							</div>
+						</div>
+						<div class="swiper-button-prev">
+							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+							</svg>
+						</div>
+						<div class="swiper-button-next">
+							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="font-2 mb-5"><span class="dark-gray f_12 fw_6">Цены:</span> <span class="light-gray">*Конечная цена зависит от количества используемого материала, сложности окрашивания и исходного цвета волос.</span></div>
+				<div class="table-responsive text-center mb-5">
+					<table class="table fw_3">
+						<tbody>
+							<tr class="fw_5">
+								<td>Услуга</td>
+								<td>Стоимость</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Длина до плеч</td>
+								<td>3000-3500</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина до лопаток</td>
+								<td>4000-4500</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td>Длина ниже лопаток</td>
+								<td>5000-6000</td>
+								<td>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto">
+										<span class="f_08 light-gray">Записаться</span>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+					<span class="f_09">Мастера</span>
+				</button>
+				<hr size="2" class="my-5">
+
+				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера  по окрашиванию</div>
 				<div class="swiper-6 position-relative">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
